Refactor caching, added http routes for punishment operations. Added grafana metrics. And many other code refactored.